implementation of the view. panel style. adding a color picker

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Card Maker</title>
+    <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <title>Card Maker | Romashka</title>
   </head>
   <body>
     <div id="root"></div>
