--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <link rel="icon" href="images/logo.svg" type="image/x-icon">
     <title>Card Maker | Romashka</title>
   </head>
   <body>
